        import when they have the same ids.

    Bugs fixed

      - FSDTMLMethod and FSPageTemplate were imported directly 
        from FileSystemSite product instead of from fssite module

      - Changed mangle.Path.fromObject() so it doesn't return '' anymore when
        from and to objects are the same.
  
      - Handle user with user id different from login properly
        (issue 1471)

    Ported from 1.5 branch

      - Add ZCatalog index upgrader to comply with an API change in Zope.

      - The new lookup window was registering resources under the name
        scripts. This name is too broad and was in fact being
        overridden by a Silva extension that introduced its own
        scripts, causing the Silva core to break. Renamed this to
        silva_scripts in the core.
     
      - The cropping dialog was broken, fixed.

      - Fixed non-interpolation issues with message ids in the image
        UI.

      - Fix in the public preview screen; it broke for ghosts and
        other objects that only register the 'public' view for
        versions.

      - Small context bug fixes in the LookupWindowWidget.

      - Some text related to reserved ids wasn't properly translated.

  1.5
  
    Features added

      - Already available in beta 1, but not in our HISTORY.txt
        file. Buttons have been added to the UI to publish and close
        content more directly.

      - Added the newest translations from the Launchpad Rosetta system.
        (https://launchpad.net/products/silva/+translations)

    Bugs fixed

      - Container policies are not hardcoded anymore for container add
        forms (add folder or add publication). Instead, the
        information on what container policies are available is
        retrieved from the service where they are registered.

      - A lot more places where i18n interpolation wasn't taking place
        anymore (${foo} in message texts) are fixed by using an 